update to fix styling issue with zoom in bottom right overlapping with slider for #500

--- a/Embed/css/main.styl
+++ b/Embed/css/main.styl
@@ -242,7 +242,10 @@ a{
 .esriSimpleSliderBR{
     bottom: $title-top !important;
     right: 20px !important;
-
+}
+.esriSimpleSliderBL{
+    bottom: $title-top !important;
+    left: 20px !important;
 }
 .no-title .esriSimpleSlider.esriSimpleSliderBL{
 
